--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,12 @@
     "main": "index.ts",
     "proxy": "http://localhost:3000",
     "scripts": {
-        "start": "nodemon --exec ts-node backend/src/index.ts",
-        "webpack": "./node_modules/.bin/webpack -w",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Medlock",
-    "license": "ISC",
-    "dependencies": {
+        "start": "react-scripts-ts start",
+        "build": "react-scripts-ts build",
+        "test": "react-scripts-ts test --env=jsdom",
+        "eject": "react-scripts-ts eject"
+      },
+      "dependencies": {
         "bootstrap": "^4.1.1",
         "jquery": "^3.3.1",
         "popper.js": "^1.14.3",
@@ -20,21 +19,16 @@
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
         "react-scripts-ts": "2.16.0",
-        "tether": "^1.4.4",
-        "aws-sdk": "^2.248.1",
-        "body-parser": "^1.18.3",
-        "express": "^4.16.3",
-        "express-session": "^1.15.6"
-    },
-    "devDependencies": {
+        "tether": "^1.4.4"
+      },
+      "devDependencies": {
         "@types/jest": "^23.0.0",
         "@types/node": "^10.3.1",
         "@types/react": "^16.3.16",
         "@types/react-dom": "^16.0.6",
         "@types/react-router": "^4.0.26",
         "@types/react-router-dom": "^4.2.7",
-        "@types/express": "^4.11.1",
-        "@types/express-session": "^1.15.9",
         "typescript": "^2.9.1"
+      }
     }
-}
+
