--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.248.1",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cookie": "^0.3.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6"
   },
