--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,34 +1,35 @@
 {
-    "name": "expense-reimbursement-system",
-    "version": "1.0.0",
-    "description": "Project 1",
-    "main": "index.ts",
-    "proxy": "http://localhost:3000",
-    "scripts": {
-        "start": "react-scripts-ts start",
-        "build": "react-scripts-ts build",
-        "test": "react-scripts-ts test --env=jsdom",
-        "eject": "react-scripts-ts eject"
-      },
-      "dependencies": {
-        "bootstrap": "^4.1.1",
-        "jquery": "^3.3.1",
-        "popper.js": "^1.14.3",
-        "react": "^16.4.0",
-        "react-dom": "^16.4.0",
-        "react-router": "^4.2.0",
-        "react-router-dom": "^4.2.2",
-        "react-scripts-ts": "2.16.0",
-        "tether": "^1.4.4"
-      },
-      "devDependencies": {
-        "@types/jest": "^23.0.0",
-        "@types/node": "^10.3.1",
-        "@types/react": "^16.3.16",
-        "@types/react-dom": "^16.0.6",
-        "@types/react-router": "^4.0.26",
-        "@types/react-router-dom": "^4.2.7",
-        "typescript": "^2.9.1"
-      }
-    }
-
+  "name": "expense-reimbursement-system",
+  "version": "1.0.0",
+  "description": "Project 1",
+  "main": "index.ts",
+  "proxy": "http://localhost:3000",
+  "scripts": {
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
+    "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.4.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts-ts": "2.16.0",
+    "tether": "^1.4.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.0.0",
+    "@types/node": "^10.3.1",
+    "@types/react": "^16.3.16",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-router": "^4.0.26",
+    "@types/react-router-dom": "^4.2.7",
+    "typescript": "^2.9.1"
+  }
+}
