One last attempt at Jenkins for this project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "."
   },
   "exclude": [
     "node_modules",
